--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-netifaces
-six
-requests
-paho_mqtt
-pycryptodome
+netifaces>=0.11.0
+paho-mqtt>=1.5.1
+pycryptodome>=3.17
+requests>=2.28.1
+six>=1.16.0
